--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,13 @@
 h1 {
     text-align: center;
     font-size: 36px;
+    font-family: 'Castoro Titling', cursive;
 }
 
 h2 {
     margin: 0 0 5px;
     font-size: 28px;
+    font-family: 'Castoro Titling', cursive;
 }
 
 select {
@@ -14,22 +16,25 @@ select {
     padding: 10px;
     border-radius: 4px;
     font-size: 18px;
+    font-family: 'Castoro Titling', cursive;
 }
 
 body {
-    background-color: #f9f7fe;
+    background: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
     
 }
 
 .container {
     max-width: 600px;
     margin: 60px auto;
-    background-color: white;
     padding: 30px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 10px;
-    font-family: sans-serif;
-   
+    font-family: 'Castoro Titling', cursive;
+    background: rgba(255, 255, 255, 0.55);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(0px);
+    -webkit-backdrop-filter: blur(0px);
 }
 
 .city {
@@ -42,8 +47,9 @@ body {
 }
 
 .city:last-child {
-    border: none;
+    border-bottom: none;
 }
+
 
 .time {
     font-size: 48px;
@@ -57,7 +63,7 @@ body {
 }
 
 .date {
-    opacity: 0.7;
+    opacity: 0.6;
     
 }
 
